--- a/1-10/style.css
+++ b/1-10/style.css
@@ -68,3 +68,18 @@ footer {
   height: 50px;
   background-color: #aaaaaa;
 }
+
+@media screen and (max-width: 768px) {
+  main {
+    display: block;
+  }
+
+  .content-box {
+    width: 90%;
+    margin:0 auto 20px auto;
+  }
+
+  .content-box:last-child {
+    margin-right: auto;
+  }
+}
